; ModuleID = '/home/carl/AnghaBench/tmux/extr_window-clock.c_window_clock_free.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window-clock.c_window_clock_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_mode_entry = type { %struct.window_clock_mode_data* }
%struct.window_clock_mode_data = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.window_mode_entry*)* @window_clock_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @window_clock_free(%struct.window_mode_entry* %0) #0 {
  %2 = alloca %struct.window_mode_entry*, align 8
  %3 = alloca %struct.window_clock_mode_data*, align 8
  store %struct.window_mode_entry* %0, %struct.window_mode_entry** %2, align 8
  %4 = load %struct.window_mode_entry*, %struct.window_mode_entry** %2, align 8
  %5 = getelementptr inbounds %struct.window_mode_entry, %struct.window_mode_entry* %4, i32 0, i32 0
  %6 = load %struct.window_clock_mode_data*, %struct.window_clock_mode_data** %5, align 8
  store %struct.window_clock_mode_data* %6, %struct.window_clock_mode_data** %3, align 8
  %7 = load %struct.window_clock_mode_data*, %struct.window_clock_mode_data** %3, align 8
  %8 = getelementptr inbounds %struct.window_clock_mode_data, %struct.window_clock_mode_data* %7, i32 0, i32 1
  %9 = call i32 @evtimer_del(i32* %8)
  %10 = load %struct.window_clock_mode_data*, %struct.window_clock_mode_data** %3, align 8
  %11 = getelementptr inbounds %struct.window_clock_mode_data, %struct.window_clock_mode_data* %10, i32 0, i32 0
  %12 = call i32 @screen_free(i32* %11)
  %13 = load %struct.window_clock_mode_data*, %struct.window_clock_mode_data** %3, align 8
  %14 = call i32 @free(%struct.window_clock_mode_data* %13)
  ret void
}

declare dso_local i32 @evtimer_del(i32*) #1

declare dso_local i32 @screen_free(i32*) #1

declare dso_local i32 @free(%struct.window_clock_mode_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
